Add Docker configuration with security best practices for Render.com deployment